llvm-toolchain-8 (1:8.0.1-6) unstable; urgency=medium

  * fix lldb-8 -P path print (Closes: #945445)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 21 Jan 2020 12:34:48 +0100

llvm-toolchain-8 (1:8.0.1-5) unstable; urgency=medium

  [ Samuel Thibault ]
  * impl-path-hurd.diff: Rename to D69683-impl-path-hurd.diff
  * hurd-cxx-paths.diff: Re-introduce patch to find C++ headers.

  [ Sylvestre Ledru ]
  * Update the apt.llvm.org repack script to increase the version
    to be above the distro version. See
    https://bugs.llvm.org/show_bug.cgi?id=44218 for more info

  [ Gianfranco Costamagna ]
  * Finish the porting to Python3

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 16 Jan 2020 19:12:33 +0100

llvm-toolchain-8 (1:8.0.1-4) unstable; urgency=medium

  * Add clangd-X => libclang-common-X-dev dependency
    See https://bugs.llvm.org/show_bug.cgi?id=43152
  * python-clang-8: missing dependency on libclang-8-dev
    (Closes: #941890)
  * Debian moved to gcc-9. This gcc version now refuses -flto="Thin"
    Move from LLVM_ENABLE_LTO="Thin" to BOOTSTRAP_LLVM_ENABLE_LTO="Thin"
    to mitigate the issue (the argument should be passed only at the
    second stage of the build process)
    See https://bugs.llvm.org/show_bug.cgi?id=43193
    (Closes: #943920)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 12 Nov 2019 14:12:48 +0100

llvm-toolchain-8 (1:8.0.1-3) unstable; urgency=medium

  * llvm-tools: depend on python2 packages too, the move to python3 was
    premature and broke opt-viewer.py

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 07 Aug 2019 15:11:36 +0200

llvm-toolchain-8 (1:8.0.1-2) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * clangd: Fix breaks+replaces missing epoch (Closes: #934016)
  * Add python to testsuite, still required by some test

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 06 Aug 2019 09:36:11 +0200

llvm-toolchain-8 (1:8.0.1-1) unstable; urgency=medium

  * New stable release