@@ -614,7 +614,8 @@ endif
 	cp $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/clang/$(LLVM_VERSION_FULL)/README.txt $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/clang/$(LLVM_VERSION_FULL)/share/README.txt
 
 # idem for the lldb python binding
-	mv $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/python3.*/site-packages/ $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/python3/dist-packages/
+	mkdir -p $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/python3/dist-packages/
+	mv $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/python3.*/site-packages/* $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/python3/dist-packages/
 
 # Remove things that CMake  install but which aren't packaged yet,
 # or are packaged from the source or build tree.
